# rwisa-vm

./: .gitignore  LICENSE  README.md
src/c/: CMakeLists.txt  vm-rwa2-0.c  vm-rwa2-1.c  vm-rwa2-2.c  vm-rwa2-3.c  vm-rwa2-4.c  vm-rwb2.c
src/clojure/: README.md  project.clj
src/clojure/src/rwa2/: core.clj  helpers.clj  terminal.clj
src/cpp/: README.md  build-debug.bash  build-release.bash  format.bash  overload.hpp  vm.cpp
src/nodejs/: vm-rwa2-0.js  vm-rwa2-1.js  vm-rwa2-2.js  vm-rwa2-3.js  vm-rwa2-4.js  vm-rwb2.js
src/python3/: vm-rwa2-0.py  vm-rwa2-1.py  vm-rwa2-2.py  vm-rwa2-3.py  vm-rwa2-4.py  vm-rwb2.py
src/rust/: Cargo.toml  README.md
src/rust/src/: main.rs
